# expense-tracking-mcp

./: .gitignore  fastmcp.json  google_api.py  pyproject.toml  server.py  settings.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  expense.py
src/services/: __init__.py  formatting.py  google_sheets.py
src/tools/: __init__.py  expense_tools.py  report_tools.py
